# pinit

./: .editorconfig  .gitignore  CONTRIBUTING.md  README.md  RELEASE_HOWTO.md  com.github.ryonakano.pin-it.yml  com.github.ryonakano.pinit.yml  index.html  meson.build  meson_options.txt
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml  flatpak-x-checker.yml  gettext.yml  main.yml
build-aux/appcenter/: com.github.ryonakano.pinit.Devel.yml
build-aux/flathub/: com.github.ryonakano.pinit.Devel.yml
com.github.ryonakano.pinit/: Application.Application.html  Application.activate.html  Application.html  Application.main.html  Application.settings.html  Application.startup.html  Config.APP_ID.html  Config.APP_VERSION.html  Config.GETTEXT_PACKAGE.html  Config.LOCALEDIR.html  Config.RESOURCE_PREFIX.html  Config.html  Define.APP_NAME.html  Define.ColorScheme.DEFAULT.html  Define.ColorScheme.FORCE_DARK.html  Define.ColorScheme.FORCE_LIGHT.html  Define.ColorScheme.html  Define.DialogResponse.CANCEL.html  Define.DialogResponse.CLOSE.html  Define.DialogResponse.DISCARD.html  Define.DialogResponse.OK.html  Define.DialogResponse.SAVE.html  Define.DialogResponse.html  Define.html  MainWindow.MainWindow.html  MainWindow.check_destroy.html  MainWindow.html  MainWindow.show_edit_view.html  MainWindow.show_files_view.html  Model.DesktopFile.DESKTOP_SUFFIX.html  Model.DesktopFile.DesktopFile.html  Model.DesktopFile.html  Model.DesktopFile.is_clean.html  Model.DesktopFile.load_file.html  Model.DesktopFile.path.html  Model.DesktopFile.save_file.html  Model.DesktopFile.saved_value_comment.html  Model.DesktopFile.saved_value_icon.html  Model.DesktopFile.saved_value_name.html  Model.DesktopFile.value_categories.html  (+68 more)
data/: Application.css  Extra.css  meson.build  pin-it.appdata.xml.in  pin-it.desktop.in  pinit.appdata.xml.in  pinit.desktop.in  pinit.desktop.in.in  pinit.gresource.xml  pinit.gresource.xml.in  pinit.gschema.xml  pinit.gschema.xml.in  pinit.metainfo.xml.in  pinit.metainfo.xml.in.in
data/gtk/: help-overlay.ui
data/resources/: meson.build  pinit.gresource.xml  pinit.gresource.xml.in
data/resources/gtk/: help-overlay.blp
data/ui/: shortcuts-dialog.blp
doc/: meson.build
docs/: _config.yml  index.md
meson/: post_install.py
po/: LINGUAS  POTFILES  README.md  ca.po  com.github.ryonakano.pin-it.pot  com.github.ryonakano.pinit.pot  cs.po  de.po  es.po  et.po  fi.po  fr.po  hi.po  hr.po  it.po  ja.po  lt.po  meson.build  nb_NO.po  nl.po  oc.po  pl.po  pt.po  pt_BR.po  ru.po  sk.po  ta.po  tr.po  uk.po  zh_CN.po  zh_Hans.po
po/extra/: LINGUAS  POTFILES  cs.po  es.po  extra.pot  fr.po  it.po  ja.po  lt.po  nb_NO.po  nl.po  pl.po  pt_BR.po  ru.po  sk.po  tr.po  uk.po
src/: AboutWindow.vala  Application.vala  CategoryChooser.vala  Config.vala.in  Define.vala  DesktopFile.vala  DesktopFileOperator.vala  DialogResponse.vala  DimLabel.vala  EditView.vala  Entry.vala  FilesView.vala  InfoButton.vala  MainGrid.vala  MainWindow.vala  RegexEntry.vala  StyleSwitcher.vala  Util.vala  WelcomeView.vala  meson.build
src/Backend/: DesktopFile.vala  DesktopFileDefine.vala  DesktopFileOperator.vala  ExternalAppLauncher.vala
src/Model/: DesktopFile.vala  DesktopFileModel.vala
src/Util/: DesktopFileUtil.vala  ExternalAppLauncher.vala  KeyFileUtil.vala
src/View/: EditView.vala  FilesView.vala
src/Views/: EditView.vala  EditViewNew.vala  FilesView.vala  WelcomeView.vala
src/Widget/: CategoriesRow.vala  CategoryChooser.vala  KeywordsRow.vala
