option('doc', type: 'boolean', value: false, description: 'Whether to generate valadoc')
option('granite', type: 'feature', value: 'disabled', description: 'Enable elementary OS integration. Requires Granite')
option('development', type: 'boolean', value: false, description: 'If this is a development build')
